--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
-    "demo": "node src/demo.js"
+    "demo": "node src/demo.js",
+    "cat-facts": "node examples/cat-facts-demo.js"
   },
   "keywords": [
     "dedalus",
